fix alignment on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@
 
 h1, h2, h3, h4 {
   font-family: 'Switzer', sans-serif;
+  color: #252525;
 }
 
 h1 {
@@ -23,6 +24,7 @@ p, li, a {
   font-family: 'Satoshi', sans-serif;
   font-weight: 400;
   margin: 0 0 8px 0;
+  color: #252525;
 }
 
 body {
